# ShopotMobile

./: README.MD  Sonar.Dockerfile  Untitled  build.gradle.kts  go-to-ci  gradle.properties  push  push-and-go-to-ci  settings.gradle.kts
composeApp/: CMakeLists.txt  build.gradle.kts  composeApp.podspec
composeApp/funcC/: decryptChacha.c  decupsChachaFile.c  decupsChachaMessage.c  encupsChachaFile.c  encupsChachaMessage.c  liboqsFuncs.c  sharedSecret.c  wolfsslNative.c
composeApp/libs/liboqs/include/oqs/: aes.h  common.h  kem.h  oqsconfig.h  rand.h  sha3x4.h  sig.h
composeApp/libs/wolfssl/include/wolfssl/: callbacks.h  certs_test.h  crl.h  error-ssl.h  options.h  quic.h  sniffer.h  ssl.h  wolfio.h
composeApp/libs/wolfssl/include/wolfssl/openssl/: aes.h  asn1.h  bio.h  bn.h  cmac.h  compat_types.h  conf.h  des.h  dh.h  dsa.h  ec.h  ecdh.h  ecdsa.h  ed25519.h  ed448.h  evp.h  hmac.h  kdf.h  md4.h  md5.h  modes.h  obj_mac.h  opensslv.h  pem.h  pkcs7.h  rc4.h  ripemd.h  rsa.h  sha.h  sha3.h  stack.h  txt_db.h  x509_vfy.h
composeApp/libs/wolfssl/include/wolfssl/wolfcrypt/: aes.h  arc4.h  asn.h  asn_public.h  blake2-impl.h  blake2-int.h  blake2.h  camellia.h  cmac.h  compress.h  cryptocb.h  curve25519.h  curve448.h  des3.h  dh.h  dilithium.h  dsa.h  ecc.h  eccsi.h  ed25519.h  ed448.h  error-crypt.h  fe_448.h  fe_operations.h  ge_448.h  hash.h  kdf.h  logging.h  md2.h  md5.h  mem_track.h  memory.h  misc.h  mpi_class.h  mpi_superclass.h  pkcs12.h  pkcs7.h  pwdbased.h  random.h  rc2.h  (+11 more)
composeApp/release/: output-metadata.json
composeApp/release/baselineProfiles/0/: composeApp-release.dm
composeApp/release/baselineProfiles/1/: composeApp-release.dm
composeApp/res/: network_security_config.xml
composeApp/src/androidMain/: AndroidManifest.xml
composeApp/src/commonMain/composeResources/drawable/: add_main.xml  add_photo.xml  add_users.xml  apps.xml  arrow_left.xml  arrowleft.xml  auth_logo.xml  call_micro.xml  call_speaker.xml  cancel.xml  car.xml  card_linked.xml  chat_call.xml  chat_copy.xml  chat_delete.xml  chat_file_message.xml  chat_forward.xml  chat_group.xml  chat_micro.xml  chat_microphone.xml  chat_nav.xml  chat_pause.xml  chat_play.xml  chat_reply.xml  chat_send_arrow.xml  check_mark.xml  clip.xml  contacts_nav.xml  create_group.xml  delete_account.xml  double_message_check.xml  download.xml  edit_pencil.xml  edit_profile.xml  file_message.xml  group.xml  half_moon.xml  human.xml  invite_contact.xml  keyboard.xml  (+33 more)
composeApp/src/commonMain/moko-resources/base/: strings.xml
composeApp/src/commonMain/moko-resources/en/: strings.xml
composeApp/src/commonMain/moko-resources/es/: strings.xml
composeApp/src/commonMain/moko-resources/ru/: strings.xml
composeApp/src/commonMain/moko-resources/strings/: strings.xml
composeApp/src/iosMain/kotlin/: main.kt
composeApp/src/main/res/drawable/: reload.xml
composeApp/src/main/res/layout/: activity_fullscreen_notification.xml
composeApp/src/main/res/values/: styles.xml
composeApp/src/main/res/xml/: file_paths.xml
(+410 files in other folders)
